Fixing badge and navigation alignments

--- a/src/cdn/elements/badges.css
+++ b/src/cdn/elements/badges.css
@@ -82,7 +82,7 @@ nav:is(.left, .right, .top, .bottom) > :is(ol, ul) > li > a > .badge {
 }
 
 .badge.none {
-  inset: auto;
+  inset: auto !important;
   transform: none;
   position: relative;
   margin: 0 0.125rem;
